Minor bug squashing

--- a/app/stylesheets/application.less
+++ b/app/stylesheets/application.less
@@ -1,5 +1,5 @@
 @import "variables.less";
-@import "navbar.less";
+@import "navBar.less";
 
 .fa {
   margin-right: 0.5em;
@@ -11,7 +11,7 @@ html, body {
 }
 
 .wrap-all {
-  min-height: 100%
+  min-height: 100%;
   margin-bottom: -57px;
 }
 
@@ -42,7 +42,7 @@ footer {
 
 .sidenav__li {
   background-color: @breadcrumb-bg;
-  border-bottom: qpx solid darken(@gray-lighter, 10%);
+  border-bottom: 1px solid darken(@gray-lighter, 10%);
 }
 
 .profile__user_info {
